About section completed

--- a/index.html
+++ b/index.html
@@ -126,27 +126,89 @@
     </div> <!-- END OF CONTAINER -->
 </section>
 
-<div id="about-section">
-     <div class="about-wrapper">
-        <h1>About me</h1>
-        <!-- <div id="personal"></div> -->
-        <div class="info-wrapper">
-            <div id="facts">
-                <h3>Facts</h3>
-                <ul>
-                    <li>Born in Bogota <span><img src="img/co.png"></span></li>
-                    <li>Raised in Athens <span><img src="img/gr.png"></span></li>
-                    <li>Live in Amsterdam <span><img src="img/nl.png"></span></li>
-                </ul>
-            </div>
-           <div id="skills">
-               <h3>Skills</h3>
-           </div>
-        </div>
-       <!--  <img id="header-me" src="img/img.jpeg" width="350"> -->
-    </div>
-</div>
+<!-- ABOUT DIV -->
 
+<div id="about-section"> <!-- #ABOUT-SECTION -->
+     <div class="about-wrapper"> <!-- ABOUT WRAPPER -->
+        <h1 class="about-h1">About me</h1><!-- ABOUT-H1 -->
+        <div class="info-wrapper"><!-- INFO-WRAPPER -->
+            <div id="personal" class="content-type"><!-- #PERSONAL -->
+                <h3 class="about-column-heading">Personal</h3>
+                <div class="about-columns"> <!-- PERSONAL ABOUT-COLUMNS -->
+                    <div class="about-column">
+                        <div class="div-icon">
+                            <i class="fa fa-info-circle" aria-hidden="true"></i>
+                        </div>
+                        <ul class="ul-content">
+                            <li>Born in Bogota <span><img src="img/co.png"></span></li>
+                            <li>Raised in Athens <span><img src="img/gr.png"></span></li>
+                            <li>Lives in Amsterdam <span><img src="img/nl.png"></span></li>
+                            <li>22 years old</li>
+                        </ul>
+                    </div>
+                    <div class="about-column">    
+                        <div class="div-icon">
+                            <i class="fa fa-heart" aria-hidden="true"></i>
+                        </div>
+                        <ul class="ul-content">
+                            <li>Watching Sports</li>
+                            <li>Running and exercise</li>
+                            <li>Music Festivals</li>
+                            <li>Cooking</li>
+                            <li>Traveling</li>
+                        </ul>
+                    </div>
+                    <div class="interests-columns about-column">    
+                        <div class="div-icon">
+                            <i class="fa fa-smile-o" aria-hidden="true"></i>
+                        </div>
+                        <ul class="ul-content">
+                            <li>Exploring personality</li>
+                            <li>Love to help others</li>
+                            <li>Attention to detail</li>
+                        </ul>
+                    </div>
+                </div> <!-- END OF ABOUT-COLUMNS -->
+            </div><!-- END OF #PERSONAL -->
+           <div id="professional" class="content-type"> <!-- #PROFESSIONAL .CONTENT-TYPE -->
+               <h3 class="about-column-heading">Professional</h3>
+               <div class="about-columns">
+                    <div class="about-column">
+                        <p>During the last two years i have been teaching myself how
+    to code by reading books and embracing all the tremendous amount of information
+    the interent can offer with sites like freeCodeCamp <i class="fa fa-free-code-camp" aria-hidden="true"></i> and Youtube <i class="fa fa-youtube" aria-hidden="true"></i>.</p>
+                    </div>
+                    <div class="about-column">    
+                        <ul class="ul-content">
+                            <li>HTML5<i class="fa fa-html5" aria-hidden="true"></i></li>
+                            <li>CSS3 <i class="fa fa-css3" aria-hidden="true"></i> (bootstrap, flexbox)</li>
+                            <li>Javascript (jquery, apis, json)</li>
+                            <li>php</li>
+                            <li>ruby</li>
+                            <li>git (Github) <i class="fa fa-github" aria-hidden="true"></i></li>
+                            <li>Command Line</li>
+                        </ul>
+                        <div class="div-icon">
+                            <i class="fa fa-code" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                    <div class="interests-columns about-column">    
+                        <ul class="ul-content">
+                            <li>The weather app I built in codepen through fcc for which I used an external API</li>
+                            <li>My portfolio webpage which I made responsive and used flexbox for the layout</li>
+                        </ul>
+                        <div class="div-icon">
+                            <i class="fa fa-trophy" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+           </div> <!-- END OF #PROFESSIONAL -->
+        </div><!-- END INFO-WRAPPER -->
+        <div class="mission">
+            <p> <i class="fa fa-arrow-right" aria-hidden="true"></i> <u>My mission is to become a full-stack web developer and offer help to others.</u></p>
+        </div>
+    </div><!-- END ABOUT-WRAPPER -->
+</div><!-- END ABOUT-SECTION -->
 
 <!--Footer Navbar-->
 
