--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Alex Karydis-Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"><!-- BOOTSTRAP -->
 	<link rel="stylesheet" type="text/css" href="css/portfolio-me.css">	<!--CSS PORTFOLIO-ME-->
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> <!-- INDIE FLOWER FONT -->
@@ -14,7 +15,7 @@
 <!--Navigation Navbar-->
 <nav class= "navbar navbar-inverse navbar-fixed-top"><!-- BOOTSTRAP CLASSES NAVBAR NAVBAR-INVERSE NAVBAR-FIXED-TOP -->
 	<div class="container"><!-- BOOTSTRAP CLASS CONTAINER-->
-		<a href="#" class="navbar-brand">AK</a><!-- BOOTSTRAP CLASS NAVBAR-BRAND --> 
+		<a href="#" class="navbar-brand">AK</a><!-- BOOTSTRAP CLASS NAVBAR-BRAND -->
 		<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
@@ -25,6 +26,7 @@
 				<li class="active"><a href="#">Home</a></li>
 				<li><a href="#portfolio">Projects</a></li>
 				<li><a href="#about-section">About</a></li>
+                <li><a href="#contact-section">Contact</a></li>
 			</ul>
 		</div><!--End of container-->
 	</div><!--End of collapse-->
@@ -33,12 +35,11 @@
 
 <!-- Header -->
     <header class="header"> <!-- MY CLASS HEADER FLEX DISPLAY  -->
-        <div class="text-vertical-center"> <!-- MY CLASS DISPLAY CHILD -->
+        <div class="header-content"> <!-- MY CLASS DISPLAY CHILD -->
             <h1>Alex Karydis</h1>
-            <br>
              <img id="header-me" class="img-circle" src="img/me-360.jpg" width="240px">
-             <h2>Web Designer&amp;Developer</h2>
-            <!-- <button class="btn"><a href="#about" class="btn btn-dark btn-lg">Find Out More</a></button> <!-- MY CLASS BTN DISPLAY: INLINE BLOCK --> 
+             <h2>Frontend Developer</h2>
+            <!-- <button class="btn"><a href="#about" class="btn btn-dark btn-lg">Find Out More</a></button> <!-- MY CLASS BTN DISPLAY: INLINE BLOCK -->
             <div class="icons-div img-circle">
                 <a href="https://github.com/alexkar13" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                 <a href="https://www.freecodecamp.com/alexkar13" target="_blank"><i class="fa fa-free-code-camp" aria-hidden="true"></i></a>
@@ -51,81 +52,72 @@
             </div>
         </div>
     </header>
+		<!-- Portfolio Section -->
+
+		<section id="portfolio">
+
+		        <h2 class="portfolio-title">Projects</h2>
+		        </div>
+		        <div class="wrapper">
+		            <div class="portfolio-item"> <!-- PORFOLIO PROJECT -->
+		                  <div class="img-container">
+		                    <img src="http://res.cloudinary.com/duyocqv0t/image/upload/v1492356798/portfolio-thumbnail_ec0zw9.png" class="img-responsive">
+		                    <div class="hover-description">
+		                    The site you are currently viewing. You can check it out in codepen.
+		                    </div>
+		                  </div>
+		                  <a href="http://codepen.io/alexkar94/full/OWGWVO/" target="_blank">
+		                    <div class="portfolio-caption">
+		                        <h3 class="text-center">Portfolio Website</h3>
+		                    </div>
+		                  </a>
+		            </div>
+
+		             <div class="portfolio-item"> <!-- WEATHER PROJECT -->
+		                <div class="img-container">
+		                    <img src="http://res.cloudinary.com/duyocqv0t/image/upload/v1492356803/weather-1920_1080_tivulw.png" class="img-responsive">
+		                  <div class="hover-description">
+		                    Weather app which shows the current temperature, a description and a weather icon based on the user’s location. App is built on jQuery and interacts with multiple APIs to get location and fetch weather data.
+		                  </div>
+		               </div>
+		               <a href="http://codepen.io/alexkar94/full/OWGWVO/" target="_blank">
+		                    <div class="portfolio-caption">
+		                        <h3 class="text-center">Weather App</h3>
+		                    </div>
+		                </a>
+		            </div>
 
 
-<!-- Portfolio Section -->
+		             <div class="portfolio-item"> <!-- QUOTE PROJECT -->
+		                <div class="img-container">
+		                    <img src="http://res.cloudinary.com/duyocqv0t/image/upload/v1492356787/quote-1920_1080_vrecvh.png" class="img-responsive">
+		                    <div class="hover-description">
+		                      An app which generates random quotes on the press of a button. User can see a quote and its author and also tweet it. Quotes are generated through a mashape API.
+		                    </div>
+		               </div>
+		               <a href="http://codepen.io/alexkar94/full/MpyPbo/" target="_blank">
+		                    <div class="portfolio-caption">
+		                        <h3 class="text-center">Random Quote Generator</h3>
+		                    </div>
+		                </a>
+		            </div>
 
-<section id="portfolio">
-    <div class="container">
-        <div class="row text-center title">
-            <div class="col-lg-12">
-                <h2>Projects</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6 col-md-4 portfolio-item"> <!-- PORFOLIO PROJECT -->
-                <a href="http://codepen.io/alexkar94/full/OWGWVO/" target="_blank">
-                    <img src="img/portfolio-thumbnail.png" class="img-responsive">
-                    <div class="portfolio-caption">
-                        <h3 class="text-center">Portfolio Website</h3>
-                        <p>The site you are currently viewing. You can check it out in codepen.</p>
-                    </div>
-                </a> 
-            </div>
-           
-             <div class="col-sm-6 col-md-4 portfolio-item"> <!-- WEATHER PROJECT -->
-                <a href="http://codepen.io/alexkar94/full/OWGWVO/" target="_blank">
-                    <img src="img/weather-1920_1080.png" class="img-responsive">
-                    <div class="portfolio-caption">
-                        <h3 class="text-center">Weather App</h3>
-                        <p>This is a weather  app that shows the local weather temperature.</p>
-                    </div>
-                </a> 
-            </div>
+		            <div class="portfolio-item">
+		                <div class="img-container">
+		                    <img src="https://res.cloudinary.com/duyocqv0t/image/upload/v1494429963/Screenshot_36_livbcd.png" class="img-responsive">
+		                  <div class="hover-description">
+		                    A wikipedia search engine made using wikipedia Api. User is able to search for wikipedia entries and also look for a random wikipedia article.
+		                  </div>
+		                </div>
+		                <a href="https://codepen.io/alexkar94/full/QvQxEd/" target="_blank">
+		                    <div class="portfolio-caption">
+		                        <h3 class="text-center">Wikipedia Viewer</h3>
+		                    </div>
+		                </a>
+		            </div>
 
-
-             <div class="col-sm-6 col-md-4 portfolio-item"> <!-- QUOTE PROJECT -->
-                <a href="http://codepen.io/alexkar94/full/MpyPbo/" target="_blank">
-                    <img src="img/quote-1920_1080.png" class="img-responsive">
-                    <div class="portfolio-caption">
-                        <h3 class="text-center">Random Quote Generator</h3>
-                        <p>This app shows yout the local temperature. First time I used an API.</p>
-                    </div>
-                </a> 
-            </div>
-
-            <div class="col-sm-6 col-md-4 portfolio-item"> <!-- JORDAN PROJECT -->
-                <a href="http://codepen.io/alexkar94/full/bByRQg/" target="_blank">
-                    <img src="img/jordan-1920_1080.png" class="img-responsive">
-                    <div class="portfolio-caption">
-                        <h3 class="text-center">Micheal Jordan Tribute</h3>
-                        <p>The first page I ever made in codepen is a tribute to Micael Jordan.</p>
-                    </div>
-                </a> 
-            </div>
-
-             <div class="col-sm-6 col-md-4 portfolio-item">
-                <a href="http://codepen.io/alexkar94/full/bByRQg/" target="_blank">
-                    <img src="img/jordan-img.png" class="img-responsive">
-                    <div class="portfolio-caption">
-                        <h3 class="text-center">Weather App</h3>
-                        <p>This is a weather  app that shows the local weather temperature.</p>
-                    </div>
-                </a> 
-            </div>
-             <div class="col-sm-6 col-md-4 portfolio-item">
-                <a href="http://codepen.io/alexkar94/full/bByRQg/" target="_blank">
-                    <img src="img/jordan-img.png" class="img-responsive">
-                    <div class="portfolio-caption">
-                        <h3 class="text-center">Weather App</h3>
-                        <p>This is a weather  app that shows the local weather temperature.</p>
-                    </div>
-                </a> 
-            </div> <!-- END OF COLUMN -->
-        </div> <!-- END OF ROW -->
-    </div> <!-- END OF CONTAINER -->
-</section>
-
+		        </div> <!-- END OF WRAPPER -->
+		</section>
 <!-- ABOUT DIV -->
 
 <div id="about-section"> <!-- #ABOUT-SECTION -->
@@ -146,7 +138,7 @@
                             <li>22 years old</li>
                         </ul>
                     </div>
-                    <div class="about-column">    
+                    <div class="about-column">
                         <div class="div-icon">
                             <i class="fa fa-heart" aria-hidden="true"></i>
                         </div>
@@ -158,7 +150,7 @@
                             <li>Traveling</li>
                         </ul>
                     </div>
-                    <div class="interests-columns about-column">    
+                    <div class="interests-columns about-column">
                         <div class="div-icon">
                             <i class="fa fa-smile-o" aria-hidden="true"></i>
                         </div>
@@ -178,7 +170,7 @@
     to code by reading books and embracing all the tremendous amount of information
     the interent can offer with sites like freeCodeCamp <i class="fa fa-free-code-camp" aria-hidden="true"></i> and Youtube <i class="fa fa-youtube" aria-hidden="true"></i>.</p>
                     </div>
-                    <div class="about-column">    
+                    <div class="about-column">
                         <ul class="ul-content">
                             <li>HTML5<i class="fa fa-html5" aria-hidden="true"></i></li>
                             <li>CSS3 <i class="fa fa-css3" aria-hidden="true"></i> (bootstrap, flexbox)</li>
@@ -192,7 +184,7 @@
                             <i class="fa fa-code" aria-hidden="true"></i>
                         </div>
                     </div>
-                    <div class="interests-columns about-column">    
+                    <div class="interests-columns about-column">
                         <ul class="ul-content">
                             <li>The weather app I built in codepen through fcc for which I used an external API</li>
                             <li>My portfolio webpage which I made responsive and used flexbox for the layout</li>
@@ -210,6 +202,33 @@
     </div><!-- END ABOUT-WRAPPER -->
 </div><!-- END ABOUT-SECTION -->
 
+<section id="contact-section"> <!-- CONTACT SECTION -->
+    <div class="contact-box">
+        <h1>Let's Work Together</h1>
+        <form method="POST" action="mail-handler.php" id="form-box" >
+            <div class="form-part">
+                <label for="name">Name</label>
+                <input type="text" name="name" placeholder="Your Name" required>
+            </div>
+            <div class="form-part">
+                <label for="email-input">Email</label>
+                <input type="email" name="email" placeholder="Your email" required>
+            </div>
+            <div class="form-part">
+                <label for="subject">Subject</label>
+                <input type="text" name="subject" placeholder="Subject">
+            </div>
+            <div class="form-part">
+                <label for="message">Message</label>
+                <textarea name="message" placeholder="Your message" id="message-box" required></textarea>
+            </div>
+
+            <button name="submit" type="submit" class="submit-button">Send</button>
+        </form>
+    </div>
+
+</section> <!-- END OF CONTACT SECTION -->
+
 <!--Footer Navbar-->
 
 <!-- <nav class="navbar navbar-default navbar-static-bottom">
@@ -218,13 +237,13 @@
 			This site has been created by Alex Karydis
 		</p>
 		<a href="#" class="btn btn-danger navbar-btn pull-right">Contact me</a>
-	</div>	
+	</div>
 </nav> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <script type="text/javascript">
-        
+
     </script>
 </body>
 </html>
