renamed css file/added thumbnail images

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 	<title>Alex Karydis-Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"><!-- BOOTSTRAP -->
-	<link rel="stylesheet" type="text/css" href="css/portfolio-me.css">	<!--CSS PORTFOLIO-ME-->
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"><!-- BOOTSTRAP -->
+	<link rel="stylesheet" type="text/css" href="css/style.css">	<!--CSS style.css-->
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> <!-- INDIE FLOWER FONT -->
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"><!--  PACIFICO FONT -->
     <script src="https://use.fontawesome.com/29964411c6.js"></script> <!-- AWESOME FONT ICONS -->
@@ -61,7 +60,7 @@
 		        <div class="wrapper">
 		            <div class="portfolio-item"> <!-- PORFOLIO PROJECT -->
 		                  <div class="img-container">
-		                    <img src="http://res.cloudinary.com/duyocqv0t/image/upload/v1492356798/portfolio-thumbnail_ec0zw9.png" class="img-responsive">
+		                    <img src="img/portfolio-thumbnail.png" class="img-responsive">
 		                    <div class="hover-description">
 		                    The site you are currently viewing. You can check it out in codepen.
 		                    </div>
@@ -75,7 +74,7 @@
 
 		             <div class="portfolio-item"> <!-- WEATHER PROJECT -->
 		                <div class="img-container">
-		                    <img src="http://res.cloudinary.com/duyocqv0t/image/upload/v1492356803/weather-1920_1080_tivulw.png" class="img-responsive">
+		                    <img src="img/weather-thumbnail.png" class="img-responsive">
 		                  <div class="hover-description">
 		                    Weather app which shows the current temperature, a description and a weather icon based on the user’s location. App is built on jQuery and interacts with multiple APIs to get location and fetch weather data.
 		                  </div>
@@ -90,7 +89,7 @@
 
 		             <div class="portfolio-item"> <!-- QUOTE PROJECT -->
 		                <div class="img-container">
-		                    <img src="http://res.cloudinary.com/duyocqv0t/image/upload/v1492356787/quote-1920_1080_vrecvh.png" class="img-responsive">
+		                    <img src="img/quote-thumbnail.png" class="img-responsive">
 		                    <div class="hover-description">
 		                      An app which generates random quotes on the press of a button. User can see a quote and its author and also tweet it. Quotes are generated through a mashape API.
 		                    </div>
@@ -104,7 +103,7 @@
 
 		            <div class="portfolio-item">
 		                <div class="img-container">
-		                    <img src="https://res.cloudinary.com/duyocqv0t/image/upload/v1494429963/Screenshot_36_livbcd.png" class="img-responsive">
+		                    <img src="img/wiki-thumbnail.png" class="img-responsive">
 		                  <div class="hover-description">
 		                    A wikipedia search engine made using wikipedia Api. User is able to search for wikipedia entries and also look for a random wikipedia article.
 		                  </div>
@@ -236,7 +235,6 @@
 		<p class="navbar-text pull-left">
 			This site has been created by Alex Karydis
 		</p>
-		<a href="#" class="btn btn-danger navbar-btn pull-right">Contact me</a>
 	</div>
 </nav> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
