added balloon and todo Projects

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		                </a>
 		            </div>
 
-		            <div class="portfolio-item">
+		            <div class="portfolio-item"> <!--Wiki Project-->
 		                <div class="img-container">
 		                    <img src="img/wiki-thumbnail.png" class="img-responsive">
 		                  <div class="hover-description">
@@ -111,6 +111,34 @@
 		                <a href="https://codepen.io/alexkar94/full/QvQxEd/" target="_blank">
 		                    <div class="portfolio-caption">
 		                        <h3 class="text-center">Wikipedia Viewer</h3>
+		                    </div>
+		                </a>
+		            </div>
+
+								<div class="portfolio-item"> <!--Balloon Game Project-->
+		                <div class="img-container">
+		                    <img src="img/balloon-thumbnail.png" class="img-responsive">
+		                  <div class="hover-description">
+		                    A game where the user has to pop as many balloons as possible before they disappear from the screen.
+		                  </div>
+		                </div>
+		                <a href="https://codepen.io/alexkar94/full/pPGGYL/" target="_blank">
+		                    <div class="portfolio-caption">
+		                        <h3 class="text-center">Balloon Game</h3>
+		                    </div>
+		                </a>
+		            </div>
+
+								<div class="portfolio-item"> <!-- Todo list Project-->
+		                <div class="img-container">
+		                    <img src="img/todo-thumbnail.png" class="img-responsive">
+		                  <div class="hover-description">
+		                    A to-do list created only with Vanilla Javascript. User can add, edit, delete and toggle todos.
+		                  </div>
+		                </div>
+		                <a href="https://codepen.io/alexkar94/full/wdRazd/" target="_blank">
+		                    <div class="portfolio-caption">
+		                        <h3 class="text-center">To-do list</h3>
 		                    </div>
 		                </a>
 		            </div>
