--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="header"> <!-- MY CLASS HEADER FLEX DISPLAY  -->
         <div class="header-content"> <!-- MY CLASS DISPLAY CHILD -->
             <h1>Alex Karydis</h1>
-             <img id="header-me" class="img-circle" src="img/me-360.jpg" width="240px">
+             <img id="header-me" class="img-circle" src="img/me-cropped.jpeg" width="240px">
              <h2>Frontend Developer</h2>
             <!-- <button class="btn"><a href="#about" class="btn btn-dark btn-lg">Find Out More</a></button> <!-- MY CLASS BTN DISPLAY: INLINE BLOCK -->
             <div class="icons-div img-circle">
