Added navigation scrolling animation

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"><!-- BOOTSTRAP -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">	<!--CSS style.css-->
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> <!-- INDIE FLOWER FONT -->
-    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"><!--  PACIFICO FONT -->
-    <script src="https://use.fontawesome.com/29964411c6.js"></script> <!-- AWESOME FONT ICONS -->
+	<!-- <link href="css/scrolling-nav.css" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> <!-- INDIE FLOWER FONT -->
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"><!--  PACIFICO FONT -->
+  <script src="https://use.fontawesome.com/29964411c6.js"></script> <!-- AWESOME FONT ICONS -->
 </head>
 <body>
 <!--Navigation Navbar-->
@@ -22,10 +23,10 @@
 		</button>
 		<div class="collapse navbar-collapse navHeaderCollapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#portfolio">Projects</a></li>
-				<li><a href="#about-section">About</a></li>
-                <li><a href="#contact-section">Contact</a></li>
+				<li><a href="#">Home</a></li>
+				<li><a href="#portfolio" class="page-scroll">Projects</a></li>
+				<li><a href="#about-section" class="page-scroll">About</a></li>
+        <li><a href="#contact-section" class="page-scroll">Contact</a></li>
 			</ul>
 		</div><!--End of container-->
 	</div><!--End of collapse-->
@@ -114,6 +115,7 @@
 		                    </div>
 		                </a>
 		            </div>
+
 
 								<div class="portfolio-item"> <!--Balloon Game Project-->
 		                <div class="img-container">
@@ -265,11 +267,10 @@
 		</p>
 	</div>
 </nav> -->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-    <script type="text/javascript">
-
-    </script>
+<!-- Scrolling Nav JavaScript -->
+<script src="js/jquery.easing.min.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
